redis for sessions, renew acces for gapi
