# db/sqlc/models.go
@@ -6,8 +6,6 @@ package db
 
 import (
 	"time"
-
-	"github.com/google/uuid"
 )
 
 type Account struct {
@@ -24,17 +22,6 @@ type Entry struct {
 	// negative or positive
 	Amount    int64     `json:"amount"`
 	CreatedAt time.Time `json:"created_at"`
-}
-
-type Session struct {
-	ID           uuid.UUID `json:"id"`
-	Username     string    `json:"username"`
-	RefreshToken string    `json:"refresh_token"`
-	UserAgent    string    `json:"user_agent"`
-	ClientIp     string    `json:"client_ip"`
-	IsBlocked    bool      `json:"is_blocked"`
-	ExpiresAt    time.Time `json:"expires_at"`
-	CreatedAt    time.Time `json:"created_at"`
 }
 
 type Transfer struct {
